# uni

./: .clang-format  .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  app-cliente.c  attack.s  bank.c  binary_search_tree.py  build.sh  claves.c  claves_servidor.c  cmake_install.cmake  compile_commands.json  dijkstra.py  error.c  exercise2.s  exercise3.s  handwritten_digit_classification_cnn.ipynb  k-means_clustering.ipynb  linked_list.py  msh.c  myenv.c  mywc.c  pca.ipynb  proxy-mq.c  proxy-sock.c  queue.c  sentiment_classification_rnn.ipynb  server.c  servidor-mq.c  servidor-sock.c  study_energy.s
Bank/: README.md  queue.h
DataStructures_and_Algorithms/: README.md
MDP_Thermostat/: main.py  turn_off.csv  turn_on.csv
Machine_Learning/: frozen_lake_mdp.ipynb  handwritten_digit_classification_mlp.ipynb
Napster/: client.c
Side-ChannelAttack_PowerConsumption/: README.md  string_compare.s
Terminal_Commands/: myls.c
alba/: claves.c  error.c  servidor.c
alba/include/: error.h  mensaje.h  servicios_server.h
clients/: app-cliente-1.c  app-cliente-10.c  app-cliente-2.c  app-cliente-3.c  app-cliente-4.c  app-cliente-5.c  app-cliente-6.c  app-cliente-7.c  app-cliente-8.c  app-cliente-9.c
common/: CMakeLists.txt  Makefile  cmake_install.cmake  cmp.cpp  cmp.hpp  header.hpp  pixel_structures.hpp  priority_queue.hpp  progargs.hpp
expected_outputs/: deer-small-100.ppm  deer-small-1000.ppm  deer-small-65535.ppm  readme.md
ftest-aos/: CMakeLists.txt  ftest_cutfreq_aos.sh  ftest_maxlevel_aos.sh  main.cpp
ftest-soa/: CMakeLists.txt  ftest_cutfreq_soa.sh  ftest_maxlevel_soa.sh  ftest_resize_soa.sh  main.cpp
imgaos/: CMakeLists.txt  Makefile  cmake_install.cmake  compress.cpp  cutfreq.cpp  cutfreq.hpp  info.cpp  info.hpp  maxlevel.cpp  resize.cpp  resize.hpp
imgsoa/: CMakeLists.txt  Makefile  cmake_install.cmake  compress.cpp  compress.hpp  cutfreq.cpp  cutfreq.hpp  info.cpp  info.hpp  maxlevel.cpp  resize.cpp  resize.hpp
imtool/: README.md
imtool-aos/: CMakeLists.txt  Makefile  Resize.cpp  Resize.hpp  cmake_install.cmake  compress.cpp  compress.hpp  cutfreq.cpp  cutfreq.hpp  functions.cpp  functions.hpp  imtool-aos  info.cpp  info.hpp  main  main.cpp  maxlevel  maxlevel.cpp  maxlevel.hpp  resize.cpp  resize.hpp
imtool-soa/: CMakeLists.txt  Makefile  ReSize.cpp  ReSize.hpp  Resize.cpp  Resize.hpp  cmake_install.cmake  compress.cpp  compress.hpp  cutfreq.cpp  cutfreq.hpp  functions.cpp  functions.hpp  info.cpp  info.hpp  main.cpp  maxlevel.cpp  maxlevel.hpp  resize.cpp  resize.hpp
imtool/common/: binaryio.hpp
imtool/ftest-aos/: ftest-compress-aos.sh  ftest_resize_aos.sh
imtool/ftest-soa/: ftest-compress-soa.sh  ftest_maxlevel_soa.sh
imtool/imgaos/: CMakeLists.txt  compress.hpp  cutfreq.cpp  maxlevel.cpp  resize.cpp
imtool/imgsoa/: compress.cpp  maxlevel.hpp
imtool/imtool-aos/: main.cpp
imtool/imtool-soa/: CMakeLists.txt
imtool/include/: claves.h  error.h  mensaje.h
imtool/outputs/: readme.md
imtool/utest-imgsoa/: CMakeLists.txt  utest_compress_soa.cpp  utest_info_soa.cpp
include/: claves-proxy-mq.h  claves_servidor.h  mensaje-proxy-mq.h  mensaje-proxy-sock.h  mensaje.h
inputs/: readme.md
jorges/: Makefile  app-cliente.c  claves.c  cliente.c  proxy.c  servicios_server.c  servidor-mq.c
jorges/include/: claves.h  mensaje.h  servicios_server.h
sisdis-ej1/: Makefile  README.md  error.c  servidor-sock.c
sisdis-ej1/clients/: app-cliente-1.c  app-cliente-10.c  app-cliente-4.c  app-cliente-7.c
utest-common/: CMakeLists.txt  utest_header.cpp  utest_pixel_structures.cpp  utest_priority_queue.cpp  utest_progargs.cpp
utest-imgaos/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  utest-imgaos[1]_include.cmake  utest_compress_aos.cpp  utest_cutfreq_aos.cpp  utest_info_aos.cpp  utest_maxlevel.cpp  utest_maxlevel_aos.cpp  utest_resize_aos.cpp
utest-imgsoa/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  utest-imgsoa[1]_include.cmake  utest_compress_soa.cpp  utest_cutfreq_soa.cpp  utest_info_soa.cpp  utest_maxlevel_soa.cpp  utest_resize_soa.cpp
